<resources>
    <string name="app_name">Laboratorio 5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation">Navigation</string>
    <string name="acerca_de">Acerca de</string>
    <string name="iniciar_encuesta">Iniciar Encuesta</string>
    <string name="encuesta">encuesta</string>
    <string name="acerca_del_programa">Acerca Del Programa</string>
    <string name="acerca_del_programa_info">Este programa es un programa de encuestas el cual puede ser utilizado para el control de calidad de una empresa
    Da la opcion a agregar las preguntas deseadas como tambien una calificacion basado en cantidad de estrellas
    </string>
    <string name="agregar">Agregar</string>
    <string name="ingrese_su_pregunta">Ingrese su pregunta</string>
    <string name="app_de_encuestas">App de Encuestas</string>
    <string name="hecho_por_diego_arredondo">Hecho por Diego Arredondo</string>
    <string name="nueva_encuesta">Nueva Encuesta</string>
    <string name="ver_respuestas">Ver Respuestas</string>
    <string name="rating">Rating</string>
    <string name="encuestas">Encuestas</string>
    <string name="resultados">Resultados</string>
    <string name="pregunta_de_prueba">Pregunta de Prueba</string>
    <string name="siguiente">Siguiente</string>
    <string name="guardar">Guardar</string>
    <string name="cero">0</string>
</resources>
